plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'kotlin-kapt'
    id 'kotlin-parcelize'
    id 'androidx.navigation.safeargs.kotlin'
    id 'dagger.hilt.android.plugin'
}

android {
    namespace 'com.dixitpatel.movieratingdemo'
    compileSdk 34

    defaultConfig {
        applicationId "com.dixitpatel.movieratingdemo"
        minSdk 26
        targetSdk 34
        versionCode 2
        versionName "1.1"

        testInstrumentationRunner "com.dixitpatel.movieratingdemo.HiltTestRunner"
        vectorDrawables {
            useSupportLibrary true
        }
        buildConfigField "String", "TMDB_BASE_URL", project.TMDB_BASE_URL
        buildConfigField "String", "TMDB_API_KEY", project.TMDB_API_KEY

        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    dataBinding {
        enabled = true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17'
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion compose_ui_version
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES.txt', 'META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', 'META-INF/LICENSE.md', 'META-INF/LICENSE-notice.md', 'META-INF/LICENSE', 'META-INF/DEPENDENCIES', 'META-INF/notice.txt', 'META-INF/license.txt', 'META-INF/dependencies.txt', 'META-INF/LGPL2.1', 'META-INF/*.kotlin_module']
        }
    }

    /**
     * sharedTest directory act as bridge between unit and instrumentation tests.
     */
    sourceSets {
        androidTest {
            java.srcDirs += "src/sharedTest/java"
        }
        test {
            java.srcDirs += "src/sharedTest/java"
        }
    }

    // Always show the result of every unit test when running via command line, even if it passes.
    testOptions.unitTests {
        includeAndroidResources true
        returnDefaultValues true
    }

    tasks.withType(Test) {
        testLogging {
            events "skipped", "failed", "passed"
        }
        /** fix for retrofit https://github.com/square/retrofit/issues/3341 */
        jvmArgs = ["--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"]
    }

}

dependencies {

    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
    implementation 'androidx.activity:activity-compose:1.7.2'
    implementation "androidx.compose.ui:ui:$compose_ui_version"
    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
    implementation 'androidx.compose.material:material:1.4.3'
    implementation 'androidx.core:core-splashscreen:1.0.1'
    implementation 'androidx.navigation:navigation-testing:2.6.0'
    implementation 'androidx.test.espresso:espresso-contrib:3.5.1'
    implementation 'androidx.test:rules:1.5.0'

    //Navigation
    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"

    // Coroutines
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'

    //Dagger - Hilt
    implementation 'com.google.dagger:hilt-android:2.46.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    kapt 'com.google.dagger:hilt-android-compiler:2.46.1'
    kapt "androidx.hilt:hilt-compiler:1.0.0"

    // Room
    implementation "androidx.room:room-runtime:2.5.1"
    kapt "androidx.room:room-compiler:2.5.1"

    // Kotlin Extensions and Coroutines support for Room
    implementation "androidx.room:room-ktx:2.5.1"

    // Compose dependencies
    implementation "androidx.navigation:navigation-compose:2.7.0-beta01"
    implementation "androidx.hilt:hilt-navigation-compose:1.1.0-alpha01"

    // Retrofit
    implementation "com.squareup.retrofit2:retrofit:2.9.0"
    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
    implementation 'com.google.code.gson:gson:2.10.1'

    // Stetho
    implementation 'com.facebook.stetho:stetho:1.6.0'
    implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'

    //Glide + Glide Transformations
    def glide_version = '4.15.1'
    implementation "com.github.bumptech.glide:glide:$glide_version"
    kapt "com.github.bumptech.glide:compiler:$glide_version"
    implementation 'jp.wasabeef:glide-transformations:4.3.0'
    implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.1'

    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'

    // Local unit tests
    testImplementation "androidx.test:core:1.5.0"
    testImplementation "junit:junit:4.13.2"
    testImplementation 'org.robolectric:robolectric:4.10.3'
    testImplementation "androidx.arch.core:core-testing:2.2.0"
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1'
    testImplementation 'com.google.truth:truth:1.1.5'
    testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    testImplementation 'io.mockk:mockk:1.13.5'
    debugImplementation "androidx.fragment:fragment-testing:1.6.0"
    testImplementation 'com.google.dagger:hilt-android-testing:2.46.1'
    kaptTest 'com.google.dagger:hilt-android-compiler:2.46.1'
    testAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.46.1'
    testImplementation 'org.mockito:mockito-android:5.4.0'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.0.0'
    testImplementation "org.jetbrains.kotlin:kotlin-test:1.7.21"
    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.7.21"

    // Instrumentation tests
    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.46.1'
    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.46.1'
    androidTestAnnotationProcessor 'com.google.dagger:hilt-android-compiler:2.46.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
    androidTestImplementation "junit:junit:4.13.2"
    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1'
    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
    androidTestImplementation 'com.google.truth:truth:1.1.5'
    //noinspection GradleDependency
    androidTestImplementation 'androidx.test:core-ktx:1.4.0'
    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.11'
    androidTestImplementation 'io.mockk:mockk-android:1.13.5'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation "androidx.test.espresso:espresso-intents:3.5.1"
    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"

    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
}